# tap-excel

./: README.md  adausdtmomdata.xlsx  catalog-selected.json  catalog.json  config.json  data.txt  meltano.yml  pyproject.toml
tap_excel/: __init__.py  client.py  tap.py
tests/: __init__.py  test_core.py
