[tool.poetry]
name = "tap-excel"
version = "0.0.1"
description = "`tap-excel` is a Singer tap for Excel, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Jong Lee <jong@hotglue.io>"]
keywords = [
    "ELT",
    "Excel",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<4"
singer-sdk = { version="~=0.33.0b1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
pandas = ">=1.3.5"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.33.0b1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_excel"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_excel"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-excel = 'tap_excel.tap:TapExcel.cli'
